refactor: 공모전 등록 dto 변경