@@ -1,17 +1,18 @@
 package mjuphotolab.photolabbe.domain.competition.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import lombok.RequiredArgsConstructor;
-import mjuphotolab.photolabbe.domain.competition.controller.dto.request.CompetitionRequest;
+import mjuphotolab.photolabbe.domain.competition.controller.dto.request.RegisterCompetitionRequest;
 import mjuphotolab.photolabbe.domain.competition.controller.dto.response.CompetitionAllResponse;
+import mjuphotolab.photolabbe.domain.competition.controller.dto.response.CompetitionDto;
 import mjuphotolab.photolabbe.domain.competition.controller.dto.response.CompetitionResponse;
 import mjuphotolab.photolabbe.domain.competition.entity.Competition;
 import mjuphotolab.photolabbe.domain.competition.repository.CompetitionRepository;
+import mjuphotolab.photolabbe.domain.user.entity.User;
 
 @Service
 @Transactional
@@ -20,18 +21,19 @@ public class CompetitionService {
 
 	private final CompetitionRepository competitionRepository;
 
-	public CompetitionResponse register(CompetitionRequest competitionRequest) {
-		Competition competition = competitionRequest.toEntity();
+	public CompetitionResponse register(RegisterCompetitionRequest registerCompetitionRequest, User user) {
+		Competition competition = registerCompetitionRequest.toEntity(user);
 		competitionRepository.save(competition);
 		return CompetitionResponse.of(competition);
 	}
 
 	@Transactional(readOnly = true)
-	public List<CompetitionAllResponse> findAllCompetitions() {
+	public CompetitionAllResponse findAllCompetitions(User user) {
 		List<Competition> competitions = competitionRepository.findAllBy();
-		return competitions.stream()
-			.map(CompetitionAllResponse::of)
-			.collect(Collectors.toList());
+		List<CompetitionDto> competitionDtos = competitions.stream()
+			.map(CompetitionDto::of)
+			.toList();
+		return CompetitionAllResponse.of(user, competitionDtos);
 	}
 
 	@Transactional(readOnly = true)
